# oauth2.0

./: .gitignore  Cargo.toml  README.md  local.settings.toml
src/: main.rs  primitives.rs  settings.rs  traits.rs  types.rs
src/providers/: discord.rs  github.rs  google.rs  mod.rs  spotify.rs  twitter.rs
src/server/: errors.rs  handlers.rs  server.rs
