[package]
name = "oauth_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
config = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
oauth2 = "5.0.0"
once_cell = "1.21.3"
eyre = "0.6.12"
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
async-trait = "0.1.88"
tower-sessions = "0.13.0"
tower-sessions-moka-store = "0.14.0"
